--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT=3002
-MONGO_URI=mongodb+srv://mstf:55551453@nodeblog.gqgfjsd.mongodb.net/?retryWrites=true&w=majority&appName=NodeBlog
-JWT_SECRET=3q2+7w2Z90Ez5r9SvQkY+Q==k3k/2vDl
+MONGO_URI=xxx
+JWT_SECRET=xxx
 # bu kısmı yerel sunucunuzda çalıştırmak için kendi mail adresiniz için uygulama şifresi oluşturarak yapabilirsiniz.
-EMAIL_USER=m.stf.erdogan.65@gmail.com
-EMAIL_PASS=uyxf jhhg ogle paaa
+EMAIL_USER=xxx
+EMAIL_PASS=xxx
 
 
 
